Fix output wrapping

--- a/frontend/src/recipes/code-generation/code-generation.module.css
+++ b/frontend/src/recipes/code-generation/code-generation.module.css
@@ -1,4 +1,4 @@
 .codeOutput pre {
     white-space: pre-wrap;
-    word-break: break-all;
+    overflow-wrap: break-word;
 }
